# wikidle

./: Cargo.toml
log/: config.yaml
src/: analyze.rs  database.rs  host.rs  lib.rs  main.rs  test.rs
src/database/: correlation.rs  error.rs  frequency.rs  mod.rs  read.rs
src/util/: schedule.rs
static/: index.css  index.html  index.js
