[package]
name = "wikidle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]

parse_wiki_text = "0.1.5"
xml-rs = "0.8.4"
regex = "1.5.5"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
log = { version = "0.4.16", features = ["release_max_level_info"] }
log4rs = "1.0.0"
chrono = "0.4.19"
bzip2 = "0.4.3"
const_format = "0.2.22"
threadpool = "1.8.1"
lru = "0.7.5"
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest  = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["macros"] }
futures = "0.3.21"
serde_json = "1.0.81"
server = { version = "0.1.1", git = "https://github.com/UnsignedByte/server.rs" }